--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:11.0.6-jre
 
-RUN mkdir /backend /backebnd/bin /backend/lib
+RUN mkdir /backend /backend/bin /backend/lib
 
 COPY build/install/backend/bin/backend /backend/bin/
 COPY build/install/backend/lib/*.jar /backend/lib/
